# Chess

./: CMakeLists.txt  Pang.vcxproj  Pang.vcxproj.filters.txt  fuentes  imagenes
AJEDREZ/: .cproject  .project  Alfil.cpp  Alfil.h  Caballo.cpp  Caballo.h  Dama.cpp  Dama.h  Pang.sln  Pang.vcxproj  Pang.vcxproj.filters  Pang.vcxproj.filters.txt  Peon.cpp  Peon.h  Piezas.h  Rey.cpp  Rey.h  Tablero.cpp  Tablero.h  Torre.cpp  Torre.h  Vector.cpp  Vector.h
AJEDREZ/src/: Alfil.cpp  Caballo.cpp  Caballo.h  CoordinadorAjedrez.cpp  CoordinadorAjedrez.h  Dama.cpp  Dama.h  GLetraUSW.hpp  Mundo.cpp  Mundo.h  Peon.cpp  Peon.h  Pieza.cpp  Pieza.h  Rey.cpp  Tablero.cpp  Tablero.h  Torre.cpp  Torre.h  Vector.cpp
AJEDREZ/tmp/Debug/: vc141.idb
AJEDREZ/tmp/Debug/Pang.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pang.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_test/: CMakeCache.txt  ChessGame  Makefile  cmake_install.cmake
lib/: ETSIDI.cpp  ETSIDI.h  glut.h
src/: Ajedrez.cpp  Alfil.cpp  Alfil.h  Caballo.cpp  Caballo.h  CoordinadorAjedrez.cpp  CoordinadorAjedrez.h  Dama.cpp  Dama.h  ListaTransformaciones.cpp  ListaTransformaciones.h  Mundo.cpp  Mundo.h  Peon.cpp  Peon.h  Pieza.cpp  Pieza.h  Rey.cpp  Rey.h  Torre.cpp  Torre.h  Vector.h
tmp/Debug/: vc141.idb
tmp/Debug/Pang.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Pang.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
